update strategy for model and repository

--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     }
   ],
   "require": {
-    "php": "^7.2",
+    "php": "^7.2|^8.0",
     "bytic/inflector": "^1.0",
     "bytic/utility": "^1.0"
   },
